added twilio for message
Send mail after confirm order
changed signup/signin page to bootstrap
confirm order after verify otp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,6 @@
       </div>
     </div>
     <%= yield %>
-    <%= render "layouts/footer"%>
+    <%#= render "layouts/footer"%>
   </body>
 </html>
