--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,24 @@
 <div class="container">
+
+  <div style="display: inline-flex;">
+    <div class="form-group">
+      <label>Sort by Category:</label>
+      <%= select_tag :category_id , options_for_select(Category.pluck(:name, :id)), include_blank: "All", class: "search_filter form-group"%>
+    </div>
+
+    <div class="form-group" style="margin-left: 10px">
+      <label>Sort by Price:</label>
+      <%= select_tag :price , options_for_select([["High to low", 'desc'], ["Low to high", "asc"]]),include_blank: "select", class: "search_filter"%>
+    </div>
+  </div>  
+
   <div id="products" class="row list-group">
     <% @products.each do | product |%>
       <div class="item  col-xs-4 col-lg-4">
         <div class="thumbnail">
           <img class="group list-group-image" src="<%= product.image.url %>" alt="" />
-          <%= product.name.truncate(20) %>
+          <div class="product-name"><%= product.name.truncate(20) %></div>
           <div class="row">
-            <div class="col-xs-12 col-md-6">
-              <p class="lead">
-            </div>
             <div class="col-xs-12 col-md-6">
               <%= render "product_row", product: product, order_item: @order_item %>
             </div>
@@ -18,3 +28,14 @@
     <%end%>
   </div>
 </div>
+
+<style type="text/css">
+  .product-name{
+    border-bottom: 1px solid;
+    border-top: 1px solid;
+    text-align: center;
+    padding: 5px;
+    margin: 8px 0 8px 0;
+    background-color: gainsboro;
+  }
+</style>
